Added Atom Packages to index

--- a/index.html
+++ b/index.html
@@ -362,11 +362,30 @@
                     </div>
                 </section>
                 <section id="resources">
-                    <h2>Resources</h2>
+                    <h2>Atom Packages</h2>
                     <div class="section-content">
                         <ul>
-                            <li><a href="http://www.cheatography.com/martinprins/cheat-sheets/sublime-text-3-osx/" target="_blank">Sublime Text 3 Cheat Sheet</a></li>
-
+                            <li>linter</li>
+                            <li>linter-rubocop</li>
+                            <li>linter-json</li>
+                            <li>linter-jshint</li>
+                            <li>linter-csslint</li>
+                            <li>linter-xmllint</li>
+                            <li>linter-scss-lint</li>
+                            <li>linter-php</li>
+                            <li>pretty-json (will format highlighted JSON to be similar to JSON Viewer) </li>
+                            <li>project-manager</li>
+                            <li>minimap</li>
+                            <li>color-picker</li>
+                            <li>emmet</li>
+                            <li>highlight-line</li>
+                            <li>autoprefixer (will generate prefixes for highlighted code if applicable)</li>
+                            <li>atom-beautify (white-spacing & formatting sorter)</li>
+                            <li>git-history (allows you to see git commits / other git history details within atom)</li>
+                            <li>file-icons</li>
+                            <li>merge-conflicts (resolves git conflicts within Atom)</li>
+                            <li>html2haml</li>
+                            <li>language-haml</li>
                         </ul>
                     </div>
                 </section>
