--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header>
             <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo">
-            <h1>FEWD 12 <span>Mar 23 - Jun 01</span></h1>
+            <h1>FEWD @ 0ptimus <span>Jun 10 - Aug 12</span></h1>
         </header>
 
         <div class="content">
