Further index edits

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     </div>
                 </section>
 
-                <section id="class-19">
-                    <h2>Class 19 <strong>Site Deployment & Class Workshop</strong> <small>May 27</small></h2>
+                <section id="class-19" class="toggleable closed">
+                    <h2><strong>Site Deployment & Class Workshop</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -88,8 +88,8 @@
                     </div>
                 </section>
 
-                <section id="class-17">
-                    <h2>Class 17 <strong>Intro to Sass/Developer Exercise</strong> <small>May 18</small></h2>
+                <section id="class-17" class="toggleable closed">
+                    <h2><strong>Intro to Sass/Developer Exercise</strong></h2>
                         <div class="section-content">
                             <h3>Materials</h3>
                             <ul>
@@ -107,8 +107,8 @@
                         </div>
                 </section>
 
-                <section id="class-16">
-                    <h2>Class 16 <strong>Forms and Plugins</strong> <small>May 13</small></h2>
+                <section id="class-16" class="toggleable closed">
+                    <h2><strong>Forms and Plugins</strong></h2>
                         <div class="section-content">
                             <h3>Materials</h3>
                             <ul>
@@ -123,8 +123,8 @@
                         </ul>
                         </div>
                 </section>
-                <section id="class-15">
-                    <h2>Class 15 <strong>Logic and Arrays</strong> <small>May 11</small></h2>
+                <section id="class-15" class="toggleable closed">
+                    <h2><strong>Logic and Arrays</strong></h2>
                         <div class="section-content">
                             <h3>Materials</h3>
                             <ul>
@@ -134,8 +134,8 @@
                             </ul>
                         </div>
                 </section>
-                <section id="class-14">
-                    <h2>Class 14 <strong>jQuery</strong> <small>May 06</small></h2>
+                <section id="class-14" class="toggleable closed">
+                    <h2><strong>jQuery</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -159,8 +159,8 @@
                     </div>
                 </section>
 
-                <section id="class-12">
-                    <h2>Class 12 &amp; 13 <strong>Arrays</strong> <small>Apr 29</small></h2>
+                <section id="class-12" class="toggleable closed">
+                    <h2><strong>Arrays</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -175,8 +175,8 @@
                     </div>
                 </section>
 
-                <section id="class-11">
-                    <h2>Class 11 <strong>JavaScript Functions</strong> <small>Apr 27</small></h2>
+                <section id="class-11" class="toggleable closed">
+                    <h2><strong>JavaScript Functions</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -193,8 +193,8 @@
                     </div>
                 </section>
 
-                <section id="class-10">
-                    <h2>Class 10 <strong>JavaScript Basics</strong> <small>Apr 22</small></h2>
+                <section id="class-10" class="toggleable closed">
+                    <h2><strong>JavaScript Basics</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -210,8 +210,8 @@
                     </div>
                 </section>
 
-                <section id="class-09">
-                    <h2>Class 09 <strong>Intro to Programming</strong> <small>Apr 20</small></h2>
+                <section id="class-09" class="toggleable closed">
+                    <h2><strong>Intro to Programming</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -225,8 +225,8 @@
                     </div>
                 </section>
 
-                <section id="class-08">
-                    <h2>Class 08 <strong>Responsive Lab</strong> <small>Apr 15</small></h2>
+                <section id="class-08" class="toggleable closed">
+                    <h2><strong>Responsive Lab</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -241,8 +241,8 @@
                     </div>
                 </section>
 
-                <section id="class-07">
-                    <h2>Class 07 <strong>Responsive Basics</strong> <small>Apr 13</small></h2>
+                <section id="class-07" class="toggleable closed">
+                    <h2><strong>Responsive Basics</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -256,8 +256,8 @@
                     </div>
                 </section>
 
-                <section id="class-06">
-                    <h2>Class 06 <strong>Advanced Layout</strong> <small>Apr 08</small></h2>
+                <section id="class-06" class="toggleable closed">
+                    <h2><strong>Advanced Layout</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -267,8 +267,8 @@
                     </div>
                 </section>
 
-                <section id="class-05">
-                    <h2>Class 05 <strong>Advanced Layout</strong> <small>Apr 06</small></h2>
+                <section id="class-05" class="toggleable closed">
+                    <h2><strong>Advanced Layout</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -278,8 +278,8 @@
                     </div>
                 </section>
 
-                <section id="class-04">
-                    <h2>Class 04 <strong>Layout</strong> <small>Apr 01</small></h2>
+                <section id="class-04" class="toggleable closed">
+                    <h2><strong>Layout</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -292,8 +292,8 @@
                     </div>
                 </section>
 
-                <section id="class-03">
-                    <h2>Class 03 <strong>Box Model</strong> <small>Mar 30</small></h2>
+                <section id="class-03" class="toggleable closed">
+                    <h2><strong>Box Model</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -306,8 +306,8 @@
                     </div>
                 </section>
 
-                <section id="class-02">
-                    <h2>Class 02 <strong>CSS Basics</strong> <small>Mar 25</small></h2>
+                <section id="class-02" class="toggleable closed">
+                    <h2><strong>CSS Basics</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
@@ -323,8 +323,8 @@
                     </div>
                 </section>
 
-                <section id="class-01">
-                    <h2>Class 01 <strong>HTML Basics</strong> <small>Mar 23</small></h2>
+                <section id="class-01" class="toggleable closed">
+                    <h2><strong>HTML Basics</strong></h2>
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
