Further edits to index

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     </div>
                 </section>
 
-                <section id="useful-links">
+                <section id="useful-links" class="toggleable closed">
                     <h2>Useful Links</h2>
                     <div class="section-content">
                         <h3>Reference</h3>
@@ -361,7 +361,7 @@
                         </ul>
                     </div>
                 </section>
-                <section id="resources">
+                <section id="resources" class="toggleable closed">
                     <h2>Atom Packages</h2>
                     <div class="section-content">
                         <ul>
