--- a/index.html
+++ b/index.html
@@ -341,17 +341,17 @@
                             <li>linter-xmllint</li>
                             <li>linter-scss-lint</li>
                             <li>linter-php</li>
-                            <li>pretty-json (will format highlighted JSON to be similar to JSON Viewer) </li>
+                            <li>pretty-json</li>
                             <li>project-manager</li>
                             <li>minimap</li>
                             <li>color-picker</li>
                             <li>emmet</li>
                             <li>highlight-line</li>
-                            <li>autoprefixer (will generate prefixes for highlighted code if applicable)</li>
-                            <li>atom-beautify (white-spacing & formatting sorter)</li>
-                            <li>git-history (allows you to see git commits / other git history details within atom)</li>
+                            <li>autoprefixer</li>
+                            <li>atom-beautify</li>
+                            <li>git-history</li>
                             <li>file-icons</li>
-                            <li>merge-conflicts (resolves git conflicts within Atom)</li>
+                            <li>merge-conflicts</li>
                             <li>html2haml</li>
                             <li>language-haml</li>
                         </ul>
