--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <link href="img/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
 
-        <title>FEWD12</title>
+        <title>0ptimus FEWD</title>
 
         <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="lib/css/reset.css">
