--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
         <header>
             <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo">
             <h1>FEWD @ 0ptimus <span>Jun 10 - Aug 12</span></h1>
+            <h5> Click Sections to Expand </h5>
         </header>
 
         <div class="content">
             <div class="container">
                 <section id="final-project" class="toggleable closed">
-                    <h2>Final Project Info <small class="note">(click to expand)</small></h2>
+                    <h2><strong>Final Project Info</strong><small class="note"></small></h2>
                     <div class="section-content">
                         <h3>Requirements</h3>
                         <ul class="bullets">
