Fixed 0ptimus Logo scaling

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <body>
 
         <header>
-            <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo">
+            <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo" style="height: 200px;">
             <h1>FEWD @ 0ptimus <span>Jun 10 - Aug 12</span></h1>
-            <h5> Click Sections to Expand </h5>
+            <small> Click Sections to Expand </small>
         </header>
 
         <div class="content">
