header formatting fixes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <header>
             <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo" style="height: 200px;">
             <h1>FEWD @ 0ptimus <span>Jun 10 - Aug 12</span></h1>
-            <small> Click Sections to Expand </small>
+            <small><span> Click Sections to Expand </span></small>
+            <br>
         </header>
 
         <div class="content">
