Misc Style Edits

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header>
             <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo" style="height: 200px;">
             <h1>FEWD @ 0ptimus <span>Jun 10 - Aug 12</span></h1>
-            <small><span> Click Sections to Expand </span></small>
+            <small><span class="subheader"> Click Sections to Expand </span></small>
             <br>
         </header>
 
