Multiple content fixes / adjustments

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body>
 
         <header>
-            <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo" style="height: 375px;">
+            <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo" class="hero">
             <h1>FEWD @ 0ptimus <span>Jun 10 - Aug 12</span></h1>
             <small><span class="subheader"> Click Sections to Expand </span></small>
             <br>
@@ -84,7 +84,7 @@
                             <ul>
                                 <li><a href="15a_forms_plugins" target="_blank">Slides</a></li>
                                 <li><a href="15a_forms_plugins/starter.zip" target="_blank">Starter Code</a></li>
-                                <li><a href="15a_forms_plugins/solution.zip" target="_blank">Solution Code</a></li>
+                                <!-- <li><a href="15a_forms_plugins/solution.zip" target="_blank">Solution Code</a></li> -->
                             </ul>
                             <h3>Additional Material</h3>
                         <ul class="bullets">
@@ -100,7 +100,7 @@
                             <ul>
                                 <li><a href="14a_ArraysLoopsLab" target="_blank">Slides</a></li>
                                 <li><a href="14a_ArraysLoopsLab/starter.zip" target="_blank">Starter Code</a></li>
-                                <li><a href="14a_ArraysLoopsLab/solution.zip" target="_blank">Solution Code</a></li>
+                                <!-- <li><a href="14a_ArraysLoopsLab/solution.zip" target="_blank">Solution Code</a></li> -->
                             </ul>
                         </div>
                 </section>
@@ -152,9 +152,9 @@
                         <ul>
                             <li><a href="11_functions" target="_blank">Slides</a></li>
                             <li><a href="11_functions/class_11_cash_register_starter.zip">Cash Register Starter Code</a></li>
-                             <li><a href="11_functions/cash-register-solution.zip" target="_blank">Cash Register Solution</a></li>
+                             <!-- <li><a href="11_functions/cash-register-solution.zip" target="_blank">Cash Register Solution</a></li> -->
                             <li><a href="11_functions/class_11_rock_paper_scissors_starter.zip" target="_blank">Rock Paper Scissors Starter Code</a></li>
-                             <li><a href="11_functions/class_11_rock_paper_scissors_solution.zip" target="_blank">Rock Paper Scissors Solution</a></li>
+                             <!-- <li><a href="11_functions/class_11_rock_paper_scissors_solution.zip" target="_blank">Rock Paper Scissors Solution</a></li> -->
                         </ul>
                         <h3>Additional Material</h3>
                         <ul class="bullets">
@@ -243,7 +243,7 @@
                         <h3>Materials</h3>
                         <ul>
                             <li><a href="05_advanced_layout/class_05_starter_code.zip" target="_blank">Layouts Starter Code</a></li>
-                            <li><a href="05_advanced_layout/class_05_solution.zip">Blog Part 2 Solution</a></li>
+                            <!-- <li><a href="05_advanced_layout/class_05_solution.zip">Blog Part 2 Solution</a></li> -->
                         </ul>
                     </div>
                 </section>
@@ -281,11 +281,11 @@
                     <div class="section-content">
                         <h3>Materials</h3>
                         <ul>
-                            <li><a href="01_html_basics/cookie_recipe.zip">Cookie Recipe Code-along Starter Code</a></li>
-                            <li><a href="02_css_basics" target="_blank">Slides</a></li>
-                            <li><a href="02_css_basics/starter_code.zip" target="_blank">Starter Code</a></li>
-                            <li><a href="pdf/CSS.pdf" target="_blank">CSS Cheat Sheet (PDF)</a></li>
-                            <li><a href="02_css_basics/about-me-class.zip">Class About Me Page Zip</a></li>
+                          <li><a href="02_css_basics" target="_blank">Slides</a></li>
+                          <li><a href="pdf/CSS.pdf" target="_blank">CSS Cheat Sheet (PDF)</a></li>
+                          <li><a href="01_html_basics/cookie_recipe.zip">Cookie Recipe Code-along Starter Code</a></li>
+                          <li><a href="02_css_basics/starter_code.zip" target="_blank">Starter Code</a></li>
+                          <li><a href="02_css_basics/about-me-class.zip">Class About Me Page Zip</a></li>
                         </ul>
                         <ul class="bullets">
                             <li>Finish the About Me Page. Extra points for the Resume page!</li>
@@ -300,7 +300,7 @@
                         <ul>
                             <li><a href="01_html_basics" target="_blank">Slides</a></li>
                             <li><a href="01_html_basics/starter_code.zip" target="_blank">Starter Code</a></li>
-                            <li><a href="01_html_basics/solution/ga_press_release-solution.zip" target="_blank">Press Release Final Code</a></li>
+                            <!-- <li><a href="01_html_basics/solution/ga_press_release-solution.zip" target="_blank">Press Release Final Code</a></li> -->
                         </ul>
                         <h3>Homework</h3>
                         <ul class="bullets">
@@ -316,12 +316,14 @@
                     <div class="section-content">
                         <h3>Reference</h3>
                         <ul>
+                            <li><a href="http://css-tricks.com" target="_blank">CSS Tricks</a> - Everything from cool snippets to core concepts broken down in great tutorials</li>
+                        </ul>
+                        <ul>
                             <li><a href="http://stackoverflow.com/" target="_blank">Stack Overflow</a> - Question/Answer site focused on programming</li>
                         </ul>
                         <h3>Software</h3>
                         <ul>
-                            <li><a href="http://www.sublimetext.com" target="_blank">Sublime Text</a> - Go-to text editor for writing code</li>
-                            <li><a href="https://itunes.apple.com/us/app/sip/id507257563?mt=12" target="_blank">Sip</a> - Grab colors off your screen to use in CSS</li>
+                            <li><a href="https://atom.io/" target="_blank">Atom</a> - Text editor actively being developed by Github's Dev Team</li>
                         </ul>
                         <h3>Tools</h3>
                         <ul>
