--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header>
             <img src="img/icons/0ptimus_Logo.png" alt="FEWD logo" class="hero">
-            <h1>FEWD @ 0ptimus <span>Jun 10 - Aug 12</span></h1>
+            <h1>FEWD @ 0ptimus <span>Jun 24 - Sept 9 ~ 16</span></h1>
             <small><span class="subheader"> Click Sections to Expand </span></small>
             <br>
         </header>
