--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <h3>Con's</h3>
                         <ul class="bullets">
                             <li>Not very flexible with integrating external API’s ( D3.js or Angular, though it can be done, is a pain in the ass )</li>
-                            <li>The value of proprietary map data is approaching zero <br><br><span>( Nokia example: bought <a href="https://maps.here.com/?map=38.8251,-90.7289,10,normal">HERE</a> for $8 Billion, recently sold for $3 Billion, i.e. open-source map data is winning against proprietary data, giving the upper hand to open-source now & in the future )</span></li>
+                            <li>The value of proprietary map data is approaching zero <br><span>( Nokia example: bought <a href="https://maps.here.com/?map=38.8251,-90.7289,10,normal">HERE</a> for $8 Billion, recently sold for $3 Billion, i.e. open-source map data is winning against proprietary data, giving the upper hand to open-source now & in the future )</span></li>
                         </ul>
                     </div>
                 </section>
@@ -52,7 +52,7 @@
                     <div class="section-content">
                       <h3>Pro's</h3>
                       <ul class="bullets">
-                        <li>Built using OSM <br><br><span>( hallmark is customization & malleability, maintained by ~2mil members )<span></li>
+                        <li>Built using OSM <br><span>( hallmark is customization & malleability, maintained by ~2mil members )<span></li>
                         <li>API is Developers Choice</li>
                         <li>Tech Support</li>
                         <li>Easy-To-Use GUI ( Map Studio ) for making custom maps / vectors / data visualizations / injecting custom SVG’s & Data into existing map styles as layers</li>
