--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                         <li>Built using OSM <br><span>( hallmark is customization & malleability, maintained by ~2mil members )<span></li>
                         <li>API is Developers Choice</li>
                         <li>Tech Support</li>
-                        <li>Easy-To-Use GUI ( Map Studio ) for making custom maps / vectors / data visualizations / injecting custom SVG’s & Data into existing map styles as layers</li>
+                        <li>Easy-To-Use GUI ( Map Studio ) for making Custom Maps / Vectors / Data Visualizations / Injecting Custom SVG’s & Data into existing map styles</li>
                         <li>Uses WebGL tech, making the animations / loading very smooth</li>
+                        <li>Visually stands-out and very appealing</li>
                       </ul>
                       <h3>Con's</h3>
                       <ul class="bullets">
@@ -72,6 +73,7 @@
                       <h3>Arguably Good or Bad</h3>
                       <ul class="bullets">
                           <li> 50,000 views/month for $50 w/ 3 custom styles </li>
+                          <li>Direct and arguably sole competitor of Google Maps due to it's configurable nature</li>
                       </ul>
                     </div>
                 </section>
