--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         </ul>
                         <h3>Con's</h3>
                         <ul class="bullets">
-                            <li>Not very flexible with integrating external API’s ( D3.js or Angular, though it can be done, is a pain in the ass )</li>
-                            <li>The value of proprietary map data is approaching zero <br><span>( Nokia example: bought <a href="https://maps.here.com/?map=38.8251,-90.7289,10,normal">HERE</a> for $8 Billion, recently sold for $3 Billion, i.e. open-source map data is winning against proprietary data, giving the upper hand to open-source now & in the future )</span></li>
+                            <li>Not very flexible with integrating external API’s ( D3.js or Angular, though it can be done, is a pain )</li>
+                            <li>The value of proprietary map data is approaching zero <br><br>Nokia for example bought <a href="https://maps.here.com/?map=38.8251,-90.7289,10,normal">HERE</a> for $8 Billion, recently sold for $3 Billion, i.e. open-source map data is winning against proprietary data, giving the upper hand to open-source now & in the future.<br><br> This calls into question their current pricing structure, along with how they proceed, as the true value of map data continues to fall.</li>
                         </ul>
                     </div>
                 </section>
