--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <title>Google vs Mapbox</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="lib/css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Lato:400,700' type='text/css'>
+    <link rel="stylesheet" href="lib/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
