--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
     <header>
         <img src="img/icons/googlevsmapbox.jpg" class="hero">
         <h1>Google Maps API vs Mapbox + OSM</h1>
-        <small><span class="subheader"> Click Sections to Expand </span></small>
         <br>
     </header>
 
     <div class="content">
-        <section id="googleMaps" class="toggleable closed">
+        <section id="googleMaps" class="toggleable">
             <h2><strong>Google Maps</strong></h2>
             <div class="section-content">
                 <h3>Pro's</h3>
@@ -56,7 +55,7 @@
         </section>
     </div>
     <div class="content">
-        <section id="mapbox" class="toggleable closed">
+        <section id="mapbox" class="toggleable">
             <h2><strong>Mapbox</strong></h2>
             <div class="section-content">
                 <h3>Pro's</h3>
