Added Sams thoughts

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                         <br>
                         <br> This calls into question their current pricing structure, along with how they proceed, as the true value of map data continues to fall.</li>
                 </ul>
+                <h3>Arguably Good or Bad</h3>
+                <ul class="bullets">
+                  <li>"I'm currently going with Google Maps, though I'm not happy about the decision. Getting any kind of custom HTML for markers/tool tips is absolutely the worst part of my React codebase (and I use "React" loosely because of it). It's spaghetti callbacks sprinkled with anonymous < div/> traversal." <strong>~ <a href="https://www.linkedin.com/in/sam-barrientos">Samuel Barrientos</a>, Full-Stack RoR Dev at <a href="http://www.fightmetric.com/">FightMetric LLC</a></strong></li>
+                </ul>
             </div>
         </section>
     </div>
