--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
                 </ul>
                 <h3>Arguably Good or Bad</h3>
                 <ul class="bullets">
-                  <li>"I'm currently going with Google Maps, though I'm not happy about the decision. Getting any kind of custom HTML for markers/tool tips is absolutely the worst part of my React codebase (and I use "React" loosely because of it). It's spaghetti callbacks sprinkled with anonymous < div/> traversal. <br><br>It's very fast though, and has good city data." <strong>~ <a href="https://www.linkedin.com/in/sam-barrientos">Samuel Barrientos</a>, Full-Stack RoR Dev at <a href="http://www.fightmetric.com/">FightMetric LLC</a></strong></li>
+                    <li>"I'm currently going with Google Maps, though I'm not happy about the decision. Getting any kind of custom HTML for markers/tool tips is absolutely the worst part of my React codebase (and I use "React" loosely because of ite). It's
+                        spaghetti callbacks sprinkled with anonymous
+                        < div/> traversal.
+                        <br>
+                        <br>It's very fast though, and has good city data." <strong>~ <a href="https://www.linkedin.com/in/sam-barrientos">Samuel Barrientos</a>, Full-Stack RoR Dev at <a href="http://www.fightmetric.com/">FightMetric LLC</a></strong></li>
+                </ul>
+                <h3>Test Slide</h3>
+                <ul class="bullets">
+                    <li><a href="00_basics/index.html" target="_blank">Slides</a></li>
                 </ul>
             </div>
         </section>
