Completed test, time to revert

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <br>
                         <br>It's very fast though, and has good city data." <strong>~ <a href="https://www.linkedin.com/in/sam-barrientos">Samuel Barrientos</a>, Full-Stack RoR Dev at <a href="http://www.fightmetric.com/">FightMetric LLC</a></strong></li>
                 </ul>
-                <h3>Test Slide</h3>
+                <!-- <h3>Test Slide</h3>
                 <ul class="bullets">
                     <li><a href="00_basics/index.html" target="_blank">Slides</a></li>
-                </ul>
+                </ul> -->
             </div>
         </section>
     </div>
