Added notes re conversation w/ Mapbox

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li>2500 map views for free, charged $0.50 USD per 1,000 additional requests up to 100,000 requests per API per day</li>
                     <li>Accuracy— Google has access to huge data streams that no ordinary company can afford to access. E.G. ETA is a function of numerous variables like terrain information, average speed data, real time traffic data, weather etc.</li>
                     <li>Associated Services; Google Maps API is keyed into services such as Places, Business, Streetview, Satellite Imagery, Autocomplete, Google Earth etc.</li>
-                    <li><a href="https://developers.google.com/maps/documentation/">Good Documentation</a></li>
+                    <li><a href="https://developers.google.com/maps/documentation/">Good Documentation</a> - vastly more organized & current than Mapbox docs</li>
                     <li><a href="https://developers.google.com/maps/documentation/javascript/examples/">Large Selection of Examples</a></li>
                     <li>Easily Configurable</li>
                     <li><a href="https://developers.google.com/maps/documentation/javascript/examples/places-searchbox">Address Input through API</a></li>
@@ -79,6 +79,7 @@
               <li>Easy-To-Use GUI ( Map Studio ) for making Custom Maps / Vectors / Data Visualizations / Injecting Custom SVG’s & Data into existing map styles</li>
               <li>Uses WebGL tech, making the animations / loading very smooth</li>
               <li>Visually stands-out and very appealing</li>
+              <li>If used, we'll likely <a href="https://www.mapbox.com/pricing/">need to pay</a> for Premium ( $499/mo ) or Enterprise ( Must Contact Them ); Aside from ancilliary bonuses, Premium offers High-Priority email assistance, meaning our questions will be answered well before many others. Enterprise grants us a dedicated Mapbox dev that will act as our point-of-contact if we ever need tech assistance with Mapbox. </li>
             </ul>
             <h3>Con's</h3>
             <ul class="bullets">
@@ -89,7 +90,8 @@
             </ul>
             <h3>Arguably Good or Bad</h3>
             <ul class="bullets">
-                <li> 50,000 views/month for $50 w/ 3 custom styles </li>
+                <li>When visualizing data as Tilesets, you upload your .mkv or .csv through Mapbox Studio, then begin giving styles to that data-layer via the stuio. This means that every layer that needs to be visualized is created, our data must then be hosted via Mapbox in order for the data-layering and associated styles to work. Their Premium plan offers up to 50gb with their Enterprise giving Unlimited, however Danny's presumption is we'll never move past the 10gb mark in mapping data, if that.</li>
+                <li>50,000 views/month for $50 w/ 3 custom styles : how many views will be needed given our traffic is yet to be determined.</li>
                 <li>Direct and arguably sole competitor of Google Maps due to it's configurable nature</li>
             </ul>
           </div>
