Added notes re conversation w/ Mapbox

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
               <li>Uses WebGL tech, making the animations / loading very smooth</li>
               <li>Visually stands-out and very appealing</li>
               <li>If used, we'll likely <a href="https://www.mapbox.com/pricing/">need to pay</a> for Premium ( $499/mo ) or Enterprise ( Must Contact Them ); Aside from ancilliary bonuses, Premium offers High-Priority email assistance, meaning our questions will be answered well before many others. Enterprise grants us a dedicated Mapbox dev that will act as our point-of-contact if we ever need tech assistance with Mapbox. </li>
+              <li>Cluster <a href="https://www.mapbox.com/mapbox-gl-js/example/cluster/" target="_blank"> Documentation</a> and a<a href="
+https://www.mapbox.com/blog/supercluster/" target="_blank"> Blog</a> talking specifically about it readily available</li>
             </ul>
             <h3>Con's</h3>
             <ul class="bullets">
